Added data and a bunch of text

--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 RegressionTables = "d519eb52-b820-54da-95a6-98e1306fdade"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
