--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+InplaceOps = "505f98c9-085e-5b2c-8e89-488be7bf1f34"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
@@ -31,6 +32,7 @@ ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 StatFiles = "1463e38c-9381-5320-bcd4-4134955f093a"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
+Traceur = "37b6cedf-1f77-55f8-9503-c64b63398394"
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
