--- a/Project.toml
+++ b/Project.toml
@@ -26,10 +26,12 @@ Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
+ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 RegressionTables = "d519eb52-b820-54da-95a6-98e1306fdade"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 StatFiles = "1463e38c-9381-5320-bcd4-4134955f093a"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 Traceur = "37b6cedf-1f77-55f8-9503-c64b63398394"
