--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+AdvancedMH = "5b7e9947-ddc0-4b3f-9b55-0d8042f74170"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
@@ -20,6 +21,7 @@ IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 InplaceOps = "505f98c9-085e-5b2c-8e89-488be7bf1f34"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
@@ -27,6 +29,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
+QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 RegressionTables = "d519eb52-b820-54da-95a6-98e1306fdade"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
